--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qoute Generator</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-    <div class="container d-flex flex-column align-items-center text-center">
-        <h1 class="mt-5">Qoute Generator</h1>
+    <div class="container d-flex flex-column align-items-center text-center mt-5">
+        <h1 class="mt-5">Quote of the Day </h1>
+        <p class="mt-3">Press the button below to recieve a random quote!</p>
         <button onclick="genratQoute()" class="btn m-4 btn-outline-dark">
-        Generate Qoute</button>
+            Generate Qoute</button>
         <h2 id="qoute"></h2>
         <h4 id="qouteAuther"></h4>
     </div>
     <script src="js/main.js"></script>
 </body>
+
 </html>
