--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qoute Generator</title>
+    <link rel="shortcut icon" href="images/icons8-circled-q-100.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="bg-body-secondary">
     <div class="container d-flex flex-column align-items-center text-center mt-5">
         <h1 class="mt-5">Quote of the Day </h1>
         <p class="mt-3">Press the button below to recieve a random quote!</p>
