--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-body-secondary">
     <div class="container d-flex flex-column align-items-center text-center mt-5">
         <h1 class="mt-5">Quote of the Day </h1>
-        <p class="mt-3">Press the button below to recieve a random quote!</p>
+        <p class="mt-3" style="font-size: 14px;">Press the button below to recieve a random quote!</p>
         <button onclick="genratQoute()" class="btn m-4 btn-outline-dark">
             Generate Qoute</button>
         <h2 id="qoute"></h2>
